# opencvProject

./: README.md
homework/: CMakeLists.txt
homework/src/: main.cpp
homework2.1/: CMakeLists.txt
homework2.1/src/: main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
